# fir-designer

./: .gitignore  Cargo.toml
src/: fir.rs  gui.rs  main.rs
