[package]
name = "fir-designer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.23"
egui_plot = "0.23"

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "katex.html"]